opam-version: "1.2"
name: "base58"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bs_api"
doc: "https://vbmithr.github.io/ocaml-base58/doc"
description: "Base58 library for Tezos"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-base58.git"
bug-reports: "https://github.com/vbmithr/ocaml-base58/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "dune" {build & >= "1.0"}
  "zarith" {>= "1.4.1"}
  "digestif" {>= "0.3"}
]
build: [ "dune" "build" "-p" name "-j" jobs ]
